Refresh token implementado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,11 @@ spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+api.security.token.expirations=1
+api.security.refresh-token.expirations=8
 
+endereco.database=jdbc:postgresql://localhost:5432/gerenciador
+endereco.username=postgres
+endereco.password=1234
 
 
