Subindo back end, funcionando autenticação

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,5 @@
-spring.application.name=aplicacao-prod
+spring.application.name=aplicacao-dev
 spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciador
-spring.datasource.username=postgres
-spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
