--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=aplicacao-prod
-spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciador
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://dpg-co45bun79t8c738uvgqg-a.oregon-postgres.render.com:5432/locadora_ncgd
+spring.datasource.username=locadora_ncgd_user
+spring.datasource.password=ivXnkbz179AsDEmgWNz7jE6exKJ73mMu
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -9,8 +9,8 @@ api.security.token.secret=${JWT_SECRET:my-secret-key}
 api.security.token.expirations=3600
 api.security.refresh-token.expirations=260000
 
-endereco.database=jdbc:postgresql://localhost:5432/gerenciador
-endereco.username=postgres
-endereco.password=1234
+endereco.database=jdbc:postgresql://dpg-co45bun79t8c738uvgqg-a.oregon-postgres.render.com:5432/locadora_ncgd
+endereco.username=locadora_ncgd_user
+endereco.password=ivXnkbz179AsDEmgWNz7jE6exKJ73mMu
 
 
